<resources>
    <string name="app_name" translatable="false">PokéData Free</string>
    <string name="title_initialize_database">Initialising databases</string>
    <string name="title_pokedex" translatable="false">Pokédex</string>
    <string name="title_abilities" translatable="false">@string/header_abilities</string>
    <string name="title_moves" translatable="false">@string/header_moves</string>
    <string name="title_natures">Natures</string>
    <string name="title_locations">Locations</string>
    <string name="title_comparison">Comparison</string>
    <string name="title_favorites">Favourites</string>
    <string name="title_experience_calculator">Experience Calculator</string>
    <string name="title_settings" translatable="false">@string/action_settings</string>
    <string name="title_about" translatable="false">@string/action_about</string>
    <string name="title_changelog">Changelog</string>
    <string name="title_advanced_filter">Advanced Filter</string>
    <string name="title_move_detail">Move</string>
    <string name="title_nature_detail">Nature</string>
    <string name="title_property_detail">Property</string>
    <string name="title_location_detail">Location</string>
    <string name="title_type_effectiveness">Type effectiveness</string>
    <string name="navigation_item_pokedex" translatable="false">@string/title_pokedex</string>
    <string name="navigation_item_abilities" translatable="false">@string/title_abilities</string>
    <string name="navigation_item_moves" translatable="false">@string/title_moves</string>
    <string name="navigation_item_natures" translatable="false">@string/title_natures</string>
    <string name="navigation_item_locations" translatable="false">@string/title_locations</string>
    <string name="navigation_item_favourites" translatable="false">@string/title_favorites</string>
    <string name="navigation_item_experience" translatable="false">@string/title_experience_calculator</string>
    <string name="navigation_item_settings" translatable="false">@string/title_settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="action_search">Search</string>
    <string name="action_compare">Compare</string>
    <string name="action_filter">Filter</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_id">By ID</string>
    <string name="action_sort_name">By name</string>
    <string name="action_play_cry">Play cry</string>
    <string name="action_play_cry_of">Play %1$s\'s cry</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_favourite_add">Add to favourites</string>
    <string name="action_favourite_remove">Remove from favourites</string>
    <string name="action_clear_all">Clear all</string>
    <string name="action_add">Add</string>
    <string name="action_undo">Undo</string>
    <string name="action_buyPro">Buy Pro</string>
    <string name="action_calculate_experience">Calculate EXP</string>
    <string name="action_calculate_experience_of">%1$s\'s EXP</string>
    <string name="got_it">OK, got it</string>
    <string name="choose_comparison_pokemon">Choose a Pokémon to compare against</string>
    <string name="compare_pokemon_forms_hint">Compare Pokémon forms?</string>
    <string name="compare_alternate_forms_hint">This Pokémon has alternate forms. Do you want to compare to one of its other forms?</string>
    <string name="clear_favorites_title">Clear Favourites?</string>
    <string name="clear_favorites_description">Are you sure you want to remove all Pokémon from the Favourites list?</string>
    <string name="show_pokemon">Show Pokémon</string>
    <string name="show_pokemon_moves">Show Pokémon moves</string>
    <string name="tab_pkmn_detail_general">General</string>
    <string name="tab_pkmn_detail_forms" translatable="false">@string/header_forms</string>
    <string name="tab_pkmn_detail_evolutions" translatable="false">@string/header_evolutions</string>
    <string name="tab_pkmn_detail_moves" translatable="false">@string/header_moves</string>
    <string name="tab_pkmn_detail_locations" translatable="false">@string/title_locations</string>
    <string name="header_general_info">General Information</string>
    <string name="attr_pokemon" translatable="false">Pokémon</string>
    <string name="attr_classification">Classification</string>
    <string name="header_abilities">Abilities</string>
    <string name="attr_ability">Ability</string>
    <string name="attr_ability_1">Ability 1</string>
    <string name="attr_ability_2">Ability 2</string>
    <string name="attr_ability_hidden">Hidden Ability</string>
    <string name="header_types">Types</string>
    <string name="attr_type">Type</string>
    <string name="attr_type_1">Type 1</string>
    <string name="attr_type_2">Type 2</string>
    <string name="header_physical_attrs">Physical Attributes</string>
    <string name="attr_height">Height</string>
    <string name="attr_mass">Mass</string>
    <string name="header_stats">Statistics</string>
    <string name="header_stats_ev">Effort values</string>
    <string name="attr_stat_hp">HP</string>
    <string name="attr_stat_atk">Attack</string>
    <string name="attr_stat_def">Defense</string>
    <string name="attr_stat_spA">Sp. Atk</string>
    <string name="attr_stat_spD">Sp. Def</string>
    <string name="attr_stat_spe">Speed</string>
    <string name="attr_stat_total">Total</string>
    <string name="attr_stat_average">Average</string>
    <string name="attr_stat_spA_noAbbr">Special Attack</string>
    <string name="attr_stat_spD_noAbbr">Special Defense</string>
    <string name="header_gender_ratio">Gender ratio</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="header_training">Training</string>
    <string name="attr_catch_rate">Catch rate</string>
    <string name="attr_levelling_rate">Levelling Rate</string>
    <string name="attr_base_happiness">Base Happiness</string>
    <string name="attr_exp_growth">Experience to Lvl. 100</string>
    <string name="attr_exp_growth_abbr">EXP to Lvl 100</string>
    <string name="attr_base_egg_steps">Base Egg Steps</string>
    <string name="attr_base_egg_cycles">Base Egg Cycles</string>
    <string name="attr_egg_group">Egg Group</string>
    <string name="attr_egg_group_1">Egg Group 1</string>
    <string name="attr_egg_group_2">Egg Group 2</string>
    <string name="header_more_information">More information</string>
    <string name="attr_generation">Generation</string>
    <string name="attr_introduced_in_gen">Introduced in gen</string>
    <string name="attr_colour">Colour</string>
    <string name="attr_shape">Shape</string>
    <string name="attr_habitat">Habitat</string>
    <string name="header_pokedex_numbers">Pokédex Numbers</string>
    <string name="attr_move_category">Category</string>
    <string name="attr_move_contest">Contest</string>
    <string name="attr_move_pp">PP</string>
    <string name="attr_move_power">Power</string>
    <string name="attr_move_accuracy">Accuracy</string>
    <string name="nature_stat_increased">Increased Stat</string>
    <string name="nature_stat_decreased">Decreased Stat</string>
    <string name="type_comparison_immune">Immune</string>
    <string name="type_comparison_strong">Strong</string>
    <string name="type_comparison_weak">Weak</string>
    <string name="header_evolutions">Evolutions</string>
    <string name="header_tools">Tools</string>
    <string name="header_tools_experience">@string/action_calculate_experience</string>
    <string name="header_forms">Forms</string>
    <string name="header_moves">Moves</string>
    <string name="header_moves_levelup">By level-up</string>
    <string name="header_moves_tutor">By tutoring</string>
    <string name="header_moves_machine">By TM/HM</string>
    <string name="header_moves_form">By form change</string>
    <string name="header_level">Level</string>
    <string name="header_location_regions">Regions</string>
    <string name="description_catch">Higher catch rates mean that the Pokémon is easier to catch, up to a maximum of 255,
        but other factors such as PokéBall type and Pokémon health also affect how easily a Pokémon can be caught in-game.
        \n\nThis Pokémon has a catch rate of %1$s.</string>
    <string name="description_happiness">Friendship, commonly referred to as happiness, is a measurement of how much a Pokémon is attached to its Trainer and enjoys being in their care.
        It can be raised or lowered - certain events such as gaining a level or walking raise it whilst faining or the use of herbal medicines decrease it.
        Friendship (happiness) can also affect the evolution of certain Pokémon, the power of Return and Frustration, and the availability of a few in-game items and Ribbons.
        \n\nThis Pokémon has a base happiness of %1$s.</string>
    <string name="description_levelling">The levelling rate is a term to describe the rate at which a Pokémon can gain experience points.
        \n\nFor example, this Pokémon can grow and level-up at a %1$s rate.</string>
    <string name="about_changelog">View all changes and improvements made since the first beta releases.</string>
    <string name="about_changelog_action">See changelog</string>
    <string name="prefCategory_dexes">Dexes and lists</string>
    <string name="pref_combinedNames">Combined Pokémon name</string>
    <string name="pref_combinedNames_summaryOn">Pokémon name and form will be combined on Pokédex lists - e.g. Mega Venusaur</string>
    <string name="pref_combinedNames_summaryOff">Pokémon name and form will be separate on Pokédex lists - e.g. Venusaur (Mega Evolution)</string>
    <string name="pref_sortAbilities">Sort Abilities alphabetically</string>
    <string name="pref_sortAbilities_summaryOn">The Abilities list will be sorted alphabetically by default</string>
    <string name="pref_sortAbilities_summaryOff">The Abilities list will be sorted by ID by default</string>
    <string name="pref_sortMoves">Sort Moves alphabetically</string>
    <string name="pref_sortMoves_summaryOn">The Moves list will be sorted alphabetically by default</string>
    <string name="pref_sortMoves_summaryOff">The Moves list will be sorted by ID by default</string>
    <string name="prefCategory_detailPage">Pokémon detail page</string>
    <string name="pref_detailColouring">Detail page colouring</string>
    <string name="pref_detailColouring_summary">Choose how you want the detail page to be coloured</string>
    <string name="pref_playCry">Play Pokémon cry by default</string>
    <string name="pref_playCry_summaryOn">Pokémon cry will be played when the detail page is opened</string>
    <string name="pref_playCry_summaryOff">Pokémon cry will not be played</string>
    <string name="prefCategory_data">Data</string>
    <string name="pref_useImperial">Use imperial units</string>
    <string name="pref_useImperial_summaryOn">Imperial units will be used (feet, pounds)</string>
    <string name="pref_useImperial_summaryOff">Metric units will be used (metres, kilograms)</string>
    <string name="img_desc_pokemon">Pokémon Image</string>
    <string name="dummy_id" translatable="false"># 537</string>
    <string name="dummy_pokemon" translatable="false">A Pokémon</string>
    <string name="dummy_form" translatable="false">A Form</string>
    <string name="dummy_classification" translatable="false">A classification</string>
    <string name="dummy_type" translatable="false">Type</string>
    <string name="dummy_description" translatable="false">Lorem ipsum text or whatever it is meant to be</string>
</resources>