<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2016-2017 Farbod Salamat-Zadeh

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<!-- http://developer.android.com/guide/topics/ui/settings.html -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/prefCategory_dexes" >
        <CheckBoxPreference
            android:key="pref_pokedex_combined_name"
            android:title="@string/pref_combinedNames"
            android:summaryOn="@string/pref_combinedNames_summaryOn"
            android:summaryOff="@string/pref_combinedNames_summaryOff"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="pref_abilities_sort_default_az"
            android:title="@string/pref_sortAbilities"
            android:summaryOn="@string/pref_sortAbilities_summaryOn"
            android:summaryOff="@string/pref_sortAbilities_summaryOff"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="pref_moves_sort_default_az"
            android:title="@string/pref_sortMoves"
            android:summaryOn="@string/pref_sortMoves_summaryOn"
            android:summaryOff="@string/pref_sortMoves_summaryOff"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/prefCategory_data" >
        <CheckBoxPreference
            android:key="pref_use_imperial_units"
            android:title="@string/pref_useImperial"
            android:summaryOn="@string/pref_useImperial_summaryOn"
            android:summaryOff="@string/pref_useImperial_summaryOff"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/prefCategory_detailPage" >
        <ListPreference
            android:key="pref_detail_colouring_type"
            android:title="@string/pref_detailColouring"
            android:summary="@string/pref_detailColouring_summary"
            android:entries="@array/pref_detailColouring_entries"
            android:entryValues="@array/pref_detailColouring_values"
            android:defaultValue="default" />
        <CheckBoxPreference
            android:key="pref_play_cry_at_start"
            android:title="@string/pref_playCry"
            android:summaryOn="@string/pref_playCry_summaryOn"
            android:summaryOff="@string/pref_playCry_summaryOff"
            android:defaultValue="false" />
        <!--
        <CheckBoxPreference
            android:key="pref_enable_images"
            android:title="@string/pref_enableImages"
            android:summaryOn="@string/pref_enableImages_summaryOn"
            android:summaryOff="@string/pref_enableImages_summaryOff"
            android:defaultValue="false" />
            -->
    </PreferenceCategory>

</PreferenceScreen>
