<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_filter"
        android:title="@string/action_filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_sort"
        android:title="@string/action_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" >
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_id"
                    android:title="@string/action_sort_id"
                    android:checked="true"
                    android:orderInCategory="0" />
                <item
                    android:id="@+id/action_sort_name"
                    android:title="@string/action_sort_name"
                    android:orderInCategory="1" />
            </group>
        </menu>
    </item>

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:orderInCategory="3"
        app:showAsAction="never" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:orderInCategory="4"
        app:showAsAction="never" />

    <item android:id="@+id/action_buyPro"
        android:title="@string/action_buyPro"
        android:orderInCategory="5"
        app:showAsAction="never" />

</menu>
