<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/AppTheme.CardView"
    app:cardUseCompatPadding="false"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.satsumasoftware.pokedex.dialog.PkmnImageDetailActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/card_padding_vertical_large"
        android:paddingBottom="@dimen/card_padding_vertical_large">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/card_padding_lateral"
            android:paddingRight="@dimen/card_padding_lateral">

            <TextView
                android:id="@+id/pkmnImageDetail_tvTitle"
                android:text="@string/dummy_pokemon"
                style="@style/AppTheme.CardView.Text.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/card_padding_vertical">
                <TextView
                    android:id="@+id/pkmnImageDetail_tvForm"
                    android:text="@string/dummy_form"
                    style="@style/AppTheme.CardView.Text.Subtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>
                <TextView
                    android:id="@+id/pkmnImageDetail_tvID"
                    android:text="@string/dummy_id"
                    style="@style/AppTheme.CardView.Text.Subtitle"
                    android:gravity="end"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/pkmnImageDetail_imgv"
                android:src="@drawable/img_unknown"
                android:contentDescription="@string/img_desc_pokemon"
                android:scaleType="fitCenter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/card_padding_vertical"/>

            <TextView
                android:id="@+id/pkmnImageDetail_tvCopyright"
                android:text="@string/dummy_description"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>