<!--
  Copyright 2016-2017 Farbod Salamat-Zadeh

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.CompareActivity">

    <item android:id="@+id/action_calculate_experience"
        android:title="@string/header_tools_experience"
        android:icon="@drawable/ic_assessment_white_24dp"
        android:orderInCategory="2"
        app:showAsAction="never" >
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_calculate_experience_pkmn1"
                    android:title="@string/action_calculate_experience"
                    android:orderInCategory="0" />
                <item
                    android:id="@+id/action_calculate_experience_pkmn2"
                    android:title="@string/action_calculate_experience"
                    android:orderInCategory="1" />
            </group>
        </menu>
    </item>

    <item android:id="@+id/action_play_cry"
        android:title="@string/action_play_cry"
        android:icon="@drawable/ic_volume_up_white_24dp"
        android:orderInCategory="4"
        app:showAsAction="never" >
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_play_cry_pkmn1"
                    android:title="@string/action_calculate_experience"
                    android:orderInCategory="0" />
                <item
                    android:id="@+id/action_play_cry_pkmn2"
                    android:title="@string/action_calculate_experience"
                    android:orderInCategory="1" />
            </group>
        </menu>
    </item>

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:orderInCategory="9"
        app:showAsAction="never" />

</menu>
