<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppTheme.CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/AppTheme.CardView.Text.Title"
            android:text="@string/title_changelog"
            android:paddingTop="@dimen/card_padding_vertical_large"
            android:paddingBottom="@dimen/card_padding_vertical"
            android:paddingLeft="@dimen/card_padding_lateral"
            android:paddingRight="@dimen/card_padding_lateral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            style="@style/AppTheme.CardView.Text.Supporting"
            android:text="@string/about_changelog"
            android:paddingLeft="@dimen/card_padding_lateral"
            android:paddingRight="@dimen/card_padding_lateral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/card_padding_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/about_btnChangelog"
                android:text="@string/about_changelog_action"
                style="@style/AppTheme.Button.Flat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    </android.support.v7.widget.CardView>